--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -62,3 +62,10 @@ jobs:
       - name: Compile assets for production
 
         run: npm run production
+
+      - uses: actions/checkout@v2
+                - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+                with:
+                  heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                  heroku_app_name: "amazon-latam" #Must be unique in Heroku
+                  heroku_email: "goth14wx@gmail.com"
