--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -65,6 +65,8 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      -name : Deploy to heroku
+      if: always()
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
