:construction: adding if only previus job success, run next job, second try

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,8 +37,9 @@ jobs:
         run: vendor/bin/phpunit
 
   build:
-    if: ${{ always() }}
     runs-on: ubuntu-latest
+    if: ${{ always() }}
+    needs: [ job ]
 
     steps:
 
