--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,7 +39,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: ${{ always() }}
-    needs: [ job ]
+    needs: [ laravel-tests ]
 
     steps:
 
