--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -38,7 +38,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    if: ${{ always() }}
+    if: ${{ always() && (needs.laravel-tests.result!='failure') }}
     needs: [ laravel-tests ]
 
     steps:
