--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -71,3 +71,27 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "amazonas-latam"
           heroku_email: "goth14wx@gmail.com"
+
+  run-if-fail-lavel-test:
+    runs-on: ubuntu-latest
+    if: ${{ always() && (needs.laravel-tests.result=='failure') }}
+    needs: [ laravel-tests ]
+    steps:
+      - name: SET AN ISSUE ABOUT THIS PROBLEM
+      run: |
+
+        curl --request POST \
+
+        --url https://api.github.com/repos/${{ github.repository }}/issues \
+
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+
+        --header 'content-type: application/json' \
+
+        --data '{
+
+          "title": "Issue created due to workflow fialure: ${{ github.run_id }}",
+
+          "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n due to failure in run: _${{ github.run_id }}_."
+
+          }'
