--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -84,7 +84,7 @@ jobs:
 
         --url https://api.github.com/repos/${{ github.repository }}/issues \
 
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'authorization: Bearer ${{ secrets.PAT_GITHUB_TOKEN }}' \
 
         --header 'content-type: application/json' \
 
