--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,5 +1,7 @@
 name: Laravel
-
+permissions:
+  contents: read
+  issues: write
 on:
   push:
     branches: [ main ]
@@ -78,20 +80,7 @@ jobs:
     needs: [ laravel-tests ]
     steps:
       - name: SET AN ISSUE ABOUT THIS PROBLEM
-        run: |
-
-          curl --request POST \
-
-          --url https://api.github.com/repos/${{ github.repository }}/issues \
-
-          --header 'authorization: Bearer ${{ secrets.PAT_GITHUB_TOKEN }}' \
-
-          --header 'content-type: application/json' \
-
-          --data '{
-
-            "title": "Issue created due to workflow fialure: ${{ github.run_id }}",
-
-            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n due to failure in run: _${{ github.run_id }}_."
-
-            }'
+      - uses: actions/checkout@v2
+      - uses: JasonEtco/create-an-issue@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB_TOKEN }}
