--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -79,6 +79,7 @@ jobs:
     if: ${{ always() && (needs.laravel-tests.result=='failure') }}
     needs: [ laravel-tests ]
     steps:
+      - uses: actions/checkout@v2
       - uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_GITHUB_TOKEN }}
