--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "heroku-postbuild": "npm run production"
+        "heroku-postbuild": "npm run prod"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.10.0",
