--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -68,6 +68,7 @@ jobs:
         run: npm run production
       - name: Mergin changes from remote heroku
       - run: |
+          git add .
           git reset --hard HEAD
           git pull heroku main
 
