--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,6 +8,6 @@
 # So if a pull request only touches javascript files, only these owners
 # will be requested to review.
 #*.js    @octocat @github/js
-        @g14wx @github
+*       @g14wx @github
 # You can also use email addresses if you prefer.
 #docs/*  docs@example.com
