--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,8 @@ permissions:
   issues: write
 on:
   pull_request:
-    branches: [ '*release*' ]
+    branches: 
+      - release
 
 jobs:
   laravel-tests:
