--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=cleardb
+DB_HOST=us-cdbr-east-04.cleardb.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=mysql
+DB_USERNAME=ba7c278407af2b
+DB_PASSWORD=0ceefb7d
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
