--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel
+        "inertiajs/inertia-laravel": "^0.4.3",
+        "laravel/framework": "^8.65",
+        "laravel/jetstream": "^2.4",
+        "laravel/sanctum": "^2.11",
+        "laravel/tinker": "^2.5",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
