--- a/.github/workflows/stagging.yaml
+++ b/.github/workflows/stagging.yaml
@@ -71,7 +71,8 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "amazonas-latam-stagging"
           heroku_email: "goth14wx@gmail.com"
-      - run: heroku ps:exec |
+      - run: |
+        heroku ps:exec
         cp .env.example .env
         php artisan key:generate
         exit
