--- a/.github/workflows/stagging.yaml
+++ b/.github/workflows/stagging.yaml
@@ -71,6 +71,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "amazonas-latam-stagging"
           heroku_email: "goth14wx@gmail.com"
+          env_file: ".env.stagging"
 
 # run-if-fail-laravel-test:
 #   runs-on: ubuntu-latest
