--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.0",
-        "fakerphp/faker": "^1.9.1"
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.9.1",
         "facade/ignition": "^2.5",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
