--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -66,11 +66,12 @@ jobs:
 #        run: npm run production
 
       - uses: actions/checkout@v2
-      - uses: yonycalsin/deploy-simple-to-heroku@v2.0.1
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "amazonas-latam-new"
           heroku_email: "goth14wx@gmail.com"
+          branch: "main"
 
   run-if-fail-laravel-test:
     runs-on: ubuntu-latest
