fix(AMAZONAS-122): Add fix for title on landing page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=d46bcb6ee88a839b7955",
-    "/css/app.css": "/css/app.css?id=0eb9f4388e3b8ba532fe"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
